# eplayerendpoint

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
debian/: changelog  control
src/gst-plugins/: CMakeLists.txt  eplayerendpoint.c  gsteplayerendpoint.cpp  gsteplayerendpoint.h
src/server/implementation/objects/: eplayerendpointImpl.cpp  eplayerendpointImpl.hpp
src/server/interface/: eplayerendpoint.eplayerendpoint.kmd.json  eplayerendpoint.kmd.json  package.json
